
2007-04-11 cjg
 * Added a new loglevel which tells when (de)indexing a field is finished.

2007-04-11 cjg
 * Bail out of an unpack if there is no mimetype, avoiding an undef warning.

2007-04-11 cjg
 * Don't index fileinfo field!

2007-04-11 cjg
 * Changed views to index subjects first, and to order subject pages by title.

2007-04-11 cjg
 * Fixed ordering of subjects in view. (sort by name_name rather than name)

2007-04-11 cjg
 * Removed custom_order from lift_embargos which should fix a bug.

2007-04-11 cjg
 * Changed custom_order again to make it sort by name, then failing that
    name_name.
 * ordervalues now gets passed dataset.
 * Compound fields now have their ordervalues set.

2007-04-12 cjg
 * Added index to __index tables causing a great indexing speed improvemnt.
 * Bad db version now does an abort() instead of a log - that way the
    message appears in the web output.

2007-04-13 cjg
 * Fixed spelling mistake recieve => receive
 * Improved the help text regarding security documents and contact-email.
 * Added missing phrase: eprint_fieldname_producers_name

2007-04-13 cjg
 * Fixed issue with database which meant that zero rows affected was 
    treated as an unsuccessful operation. Which it isn't.

2007-05-24 tdb
 * Added support for exporting partial data in Eprints Application Profile
    format

2007-05-25 cjg
 * Corrected the way the security.pl config file gets the remote IP.

2007-05-25 cjg
 * Fixed conf_id/confid typo in Backcompatability

2007-05-25 cjg
 * Textonly pins now don't expand. Fixing a bug that {} in titles caused
    an error.

2007-05-25 tdb
 * Pretty-printing from POD tester

2007-05-25 cjg
 * Fixed typo in the textonly pins change
 * bin/import now has an option to use ids from the data file
 * counters are now set to the minimum of their current value and the 
    last eprintid,userid when an eprint/user is added.
 * $obj->exists_and_set now uses has_field instead of get_field which
    should prevent the annoying warning.

